--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "mysql2": "^3.2.3",
